Bug 118238 - Macros can't be enabled when opening a document via remote UNO
Summary: Macros can't be enabled when opening a document via remote UNO
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.1.0.0.beta1+
Hardware: All All
: medium normal
Assignee: Samuel Mehrbrodt
URL:
Whiteboard: target:6.2.0 target:6.1.0.1
Keywords:
Depends on:
Blocks:
 
Reported: 2018-06-19 09:37 UTC by Samuel Mehrbrodt
Modified: 2019-02-11 16:13 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Samuel Mehrbrodt 2018-06-19 09:37:33 UTC
When opening a document with macros, usually a dialog appears asking if macros should be enabled.

However, this doesn't work when opening a document via remote UNO. In this case, all interactions are "muted".

We should instead read the "Hidden" MediaDescriptor flag [1] and only if it is set to true, mute the interactions. If the document is visible, the macro dialog (and other dialogs) should be shown.

[1] https://api.libreoffice.org/docs/idl/ref/servicecom_1_1sun_1_1star_1_1document_1_1MediaDescriptor.html
Comment 1 Commit Notification 2018-06-19 12:14:14 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1115a60e6d825c049680e7f2caf318e36d481b12

tdf#118238 Only disable UI interaction when loading document as hidden

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2018-06-22 11:30:37 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e873ce870c8d81c842ca5f211e07e42a51fb7cbf&h=libreoffice-6-1

tdf#118238 Only disable UI interaction when loading document as hidden

It will be available in 6.1.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.