tdf#118238 Only disable UI interaction when loading document as hidden

The "quiet" interaction handler was used unconditionally
when loading a document via the loadComponentFromURL API method.
So no dialog was shown asking the user whether he wants to enable macros.

With this patch, the "quiet" interaction handler is only used,
when the document was loaded with the "Hidden" property set.

Change-Id: Idd522d0bf605499b071390fb58312181b755dfca